[gd_scene load_steps=18 format=3 uid="uid://i7el8snxgahn"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_66lv0"]
[ext_resource type="Texture2D" uid="uid://q3outy45v6m4" path="res://Sprites/UI/UpLeftHUD.png" id="1_stnks"]
[ext_resource type="Texture2D" uid="uid://cm8kwbjop51y" path="res://Sprites/UI/ProgressBar3.png" id="2_plgo0"]
[ext_resource type="Texture2D" uid="uid://c0338h4np35j3" path="res://Sprites/UI/ProgressBar1.png" id="3_dncr1"]
[ext_resource type="Texture2D" uid="uid://dkmuono6s6los" path="res://Sprites/UI/WeaponSymbol2.png" id="3_piygg"]
[ext_resource type="Texture2D" uid="uid://exxhhcg7cvig" path="res://Sprites/UI/ProgressBar2.png" id="4_f0f5c"]
[ext_resource type="Texture2D" uid="uid://bx47nlws3yi0d" path="res://Sprites/UI/DownLeftHUD.png" id="5_cmkba"]
[ext_resource type="Texture2D" uid="uid://cymg7vw8i5qag" path="res://Sprites/UI/WeaponSymbol1.png" id="6_dgdb0"]
[ext_resource type="Texture2D" uid="uid://ybegqcmtrday" path="res://Sprites/UI/SmallSymbols1.png" id="7_pcewk"]
[ext_resource type="Texture2D" uid="uid://cy0in38hqepvv" path="res://Sprites/UI/SmallSymbols2.png" id="8_s36cl"]
[ext_resource type="Texture2D" uid="uid://117kwa2hc84m" path="res://Sprites/UI/SmallSymbols3.png" id="9_cc6em"]
[ext_resource type="Texture2D" uid="uid://fsf63lj25r2s" path="res://Sprites/exit1.png" id="12_d578d"]
[ext_resource type="Texture2D" uid="uid://cldrfke0v0o65" path="res://Sprites/exit2.png" id="13_ia5h3"]
[ext_resource type="Texture2D" uid="uid://k27hhmrai0wf" path="res://Sprites/exit3.png" id="14_ehxqk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6djis"]
resource_local_to_scene = true
bg_color = Color(0, 0, 0, 0.486275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cccwh"]
bg_color = Color(0.329412, 0.305882, 0.407843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w87ot"]
bg_color = Color(0.329412, 0.305882, 0.407843, 1)

[node name="UI" type="Control" groups=["UI"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_66lv0")
graph_scale = 8
sword_symbol = ExtResource("6_dgdb0")
magic_symbol = ExtResource("3_piygg")
metadata/_edit_use_anchors_ = true

[node name="UpHUD" type="Label" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 160.0
offset_top = 3.0
offset_right = 320.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.329412, 0.305882, 0.407843, 1)
theme_override_colors/font_shadow_color = Color(0.12549, 0.235294, 0.337255, 1)
text = "Current Round: 1"
horizontal_alignment = 1

[node name="UpLeftHUD" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_stnks")
stretch_mode = 2

[node name="HP Bar" type="TextureProgressBar" parent="UpLeftHUD"]
layout_mode = 0
offset_left = 50.0
offset_top = 3.0
offset_right = 120.0
offset_bottom = 43.0
value = 90.0
texture_under = ExtResource("2_plgo0")
texture_progress = ExtResource("3_dncr1")

[node name="Mana Bar" type="TextureProgressBar" parent="UpLeftHUD"]
layout_mode = 0
offset_left = 50.0
offset_top = 14.0
offset_right = 120.0
offset_bottom = 54.0
value = 50.0
texture_under = ExtResource("2_plgo0")
texture_progress = ExtResource("4_f0f5c")

[node name="WeaponSymbol" type="TextureRect" parent="UpLeftHUD"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 27.0
offset_bottom = 27.0
texture = ExtResource("6_dgdb0")

[node name="DownLeftHUD" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 171.0
offset_right = 75.0
offset_bottom = 270.0
grow_vertical = 0
texture = ExtResource("5_cmkba")

[node name="SwordIcon" type="TextureRect" parent="DownLeftHUD"]
z_index = 1
y_sort_enabled = true
layout_mode = 0
offset_left = 52.0
offset_top = 80.0
offset_right = 65.0
offset_bottom = 93.0
texture = ExtResource("7_pcewk")
stretch_mode = 2

[node name="SwordLine" type="Line2D" parent="DownLeftHUD"]
position = Vector2(4, 52)
points = PackedVector2Array(0, 0, 9, 11, 18, 15, 26, -12, 27, 11, 36, 0, 45, -11, 54, -15)
width = 3.0
default_color = Color(1, 0.666667, 0.368627, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MagicIcon" type="TextureRect" parent="DownLeftHUD"]
z_index = 1
y_sort_enabled = true
layout_mode = 0
offset_left = 52.0
offset_right = 65.0
offset_bottom = 13.0
texture = ExtResource("8_s36cl")
stretch_mode = 2

[node name="MagicLine" type="Line2D" parent="DownLeftHUD"]
position = Vector2(4, 52)
points = PackedVector2Array(0, 0, 2, 23, 19, 2, 27, 11, 33, 17, 35, -16, 50, 0, 54, -15)
width = 3.0
default_color = Color(0.552941, 0.411765, 0.478431, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="EnemyIcon" type="TextureRect" parent="DownLeftHUD"]
z_index = 1
y_sort_enabled = true
layout_mode = 0
offset_left = 52.0
offset_top = 30.0
offset_right = 65.0
offset_bottom = 43.0
texture = ExtResource("9_cc6em")
stretch_mode = 2

[node name="EnemyLine" type="Line2D" parent="DownLeftHUD"]
position = Vector2(4, 52)
points = PackedVector2Array(0, 0, 5, 6, 9, 11, 15, -16, 18, 15, 27, 11, 31, 9, 17, -25, 36, 0, 41, -43, 45, -11, 54, -15)
width = 3.0
default_color = Color(0.815686, 0.505882, 0.34902, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LeftHUD" type="Control" parent="."]
anchors_preset = 0
offset_left = 6.0
offset_top = 60.0
offset_right = 77.0
offset_bottom = 143.0

[node name="SwordPanel" type="Panel" parent="LeftHUD"]
layout_mode = 0
offset_left = -2.0
offset_top = -7.0
offset_right = 47.0
offset_bottom = 22.0

[node name="Sword" type="TextureRect" parent="LeftHUD/SwordPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 21.0
offset_bottom = 21.0
texture = ExtResource("7_pcewk")
stretch_mode = 2

[node name="SwordLabel" type="Label" parent="LeftHUD/SwordPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 7.0
offset_right = 65.0
offset_bottom = 20.0
text = "5"

[node name="MagicPanel" type="Panel" parent="LeftHUD"]
layout_mode = 0
offset_left = -2.0
offset_top = 29.0
offset_right = 47.0
offset_bottom = 58.0

[node name="Magic" type="TextureRect" parent="LeftHUD/MagicPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 21.0
offset_bottom = 21.0
texture = ExtResource("8_s36cl")
stretch_mode = 2

[node name="MagicLabel" type="Label" parent="LeftHUD/MagicPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 7.0
offset_right = 65.0
offset_bottom = 20.0
text = "5"

[node name="EnemyPanel" type="Panel" parent="LeftHUD"]
layout_mode = 0
offset_left = -2.0
offset_top = 65.0
offset_right = 47.0
offset_bottom = 94.0

[node name="Enemy" type="TextureRect" parent="LeftHUD/EnemyPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 21.0
offset_bottom = 21.0
texture = ExtResource("9_cc6em")
stretch_mode = 2

[node name="EnemyLabel" type="Label" parent="LeftHUD/EnemyPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 7.0
offset_right = 65.0
offset_bottom = 20.0
text = "5"

[node name="MainMenuButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 442.0
offset_top = 8.0
offset_right = 472.0
offset_bottom = 38.0
grow_horizontal = 0
texture_normal = ExtResource("12_d578d")
texture_pressed = ExtResource("14_ehxqk")
texture_hover = ExtResource("13_ia5h3")

[node name="PausePanel" type="Panel" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6djis")

[node name="Paused Text" type="Label" parent="PausePanel"]
z_index = 11
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 112.0
offset_right = -80.0
offset_bottom = 125.0
grow_horizontal = 2
scale = Vector2(3, 3)
text = "CLICK to resume"
horizontal_alignment = 1

[node name="DeadPanel" type="Panel" parent="."]
visible = false
z_index = 12
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cccwh")

[node name="Dead Text" type="Label" parent="DeadPanel"]
z_index = 11
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 83.0
offset_right = -80.0
offset_bottom = 112.0
grow_horizontal = 2
scale = Vector2(3, 3)
text = "You Died!
REFRESH to Play Again"
horizontal_alignment = 1

[node name="WinPanel" type="Panel" parent="."]
visible = false
z_index = 12
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w87ot")

[node name="Win Text" type="Label" parent="WinPanel"]
z_index = 11
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 93.0
offset_right = -80.0
offset_bottom = 122.0
grow_horizontal = 2
scale = Vector2(3, 3)
text = "Congratulations!
Thanks for Playing"
horizontal_alignment = 1

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
